2009-07-09  Manuel Arostegui <manuel@todo-linux.com>

	* pandora_console.spec: Removed unnecessary dependency.

2009-07-08  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	* translation.

	* include/languages/index.pot: Updated po template.

2009-07-08  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_fsgraph.php: Use the user defined date format in
	  module and combined charts.

	* operation/agentes/estado_ultimopaquete.php: Fixed the chart URL.

	* operation/agentes/stat_win.php: Show the agent name in the window
	  title.

2009-07-06  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	* translation.

	* include/languages/index.pot: Updated po template.

2009-07-06  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	* translation.

	* include/languages/index.pot: Updated po template.

2009-07-01  Sancho Lerena  <slerena@artica.es>

	* include/functions_config.php: Fixed setup problem for fontpath token.
	
	* godmode/setup/setup.php, setup_visuals.php: Moved some items to other
	file (fontpath, flashgraph and agent graph options).
	
	* godmode/db/db_main.php: Bigger image.
	
2009-07-01  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_custom_graphs.php, include/fgraph.php,
	  include/functions_fsgraph.php: Small fixes, mostly path related.

2009-07-01  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	* translation.

	* include/languages/index.pot: Updated po template.

	* godmode/reporting/map_builder.php,
	* godmode/reporting/graph_builder.php: Updated translatable period
	* strings to reduce its number and make them more compliant with the
	* rest.

2009-06-30  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	* translation.
