@@ -1,3 +1,7 @@
+2009-07-15  Miguel de Dios  <miguel.dedios@artica.es>
+
+	* godmode/agentes/manage_config_remote.php: fix name of colums in query.
+
 2009-07-09  Manuel Arostegui <manuel@todo-linux.com>
 
 	* pandora_console.spec: Removed unnecessary dependency.
